# cloudbrigade-deepblaster

./: .gitignore  NOTICE  README.md  cb-deepblaster-project-beta1.tgz  download-and-convert-object-detection-model.md  getting-started.md
deepblaster_ws/: .rosinstall  install_dependencies.sh
deepblaster_ws/deepblaster_ctrl_pkg/: README.md  package.xml  setup.cfg  setup.py
deepblaster_ws/deepblaster_ctrl_pkg/deepblaster_ctrl_pkg/: __init__.py  constants.py  deepblaster_ctrl_node.py
deepblaster_ws/deepblaster_ctrl_pkg/deepblaster_ctrl_pkg/python-arduino-serial/examples/: arduino_serial.py
deepblaster_ws/deepblaster_ctrl_pkg/deepblaster_ctrl_pkg/python-arduino-serial/robust_serial/: robust_serial.py
deepblaster_ws/deepblaster_ctrl_pkg/launch/: deepblaster_ctrl_pkg_launch.py
deepblaster_ws/deepblaster_interfaces_pkg/: CMakeLists.txt  README.md  package.xml
deepblaster_ws/deepblaster_interfaces_pkg/msg/: BlasterCtrlMsg.msg
deepblaster_ws/deepblaster_interfaces_pkg/srv/: ArmBlasterSrv.srv  GetBlasterStateSrv.srv
deepblaster_ws/deepblaster_launcher/: CMakeLists.txt  README.md  package.xml
deepblaster_ws/deepblaster_launcher/launch/: deepblaster_launcher.py
deepblaster_ws/deepblaster_object_detection_pkg/: README.md  package.xml  setup.cfg  setup.py
deepblaster_ws/deepblaster_object_detection_pkg/deepblaster_object_detection_pkg/: __init__.py  constants.py  deepblaster_object_detection_node.py  utils.py
deepblaster_ws/deepblaster_targeting_pkg/: README.md  package.xml  setup.cfg  setup.py
(+5 files in other folders)
