<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepblaster_ctrl_pkg</name>
  <version>0.0.1</version>
  <description>
      This package contains the blaster control node that is responsible for 
      communicating the the blaster control module, controlling the blaster
      servo angles, spinning up the flywheels, and engaging the trigger
      (blaster feeder motor)
  </description>
  <maintainer email="ctodd@cloudbrigade.com">Cloud Brigade DeepBlaster</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>deepblaster_interfaces_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
